# tensorrt

./: .gitignore
cpp/: CMakeLists.txt  main.cpp
py/scripts/: backbone.py  dataloader.py  evalute.py  export_onnx.py  infer.py  model.py  solve_dogs_cats.py  test.py  train.py
